# AI-Playground

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-broker.txt  requirements-dev.txt  requirements.txt  setup.py  tox.ini  wsgi.py
aiplayground/: __main__.py  _app.py  app.py  broker.py  exceptions.py  gameserver.py  logging.py  messages.py  player.py  schemas.py  settings.py  types.py
aiplayground/api/: __init__.py
aiplayground/api/auth/: __init__.py  auth.py  initialize.py  models.py  schemas.py  views.py
aiplayground/api/bot/: __init__.py  views.py
aiplayground/api/bots/: __init__.py  models.py  schemas.py  views.py
aiplayground/api/players/: __init__.py  models.py  schemas.py  views.py
aiplayground/api/rooms/: __init__.py  models.py  schemas.py  views.py
aiplayground/api/tournaments/: __init__.py  models.py  schemas.py  tournaments.py  views.py
aiplayground/gameservers/: __init__.py  base.py  kalaha.py  spr.py  tictactoe.py
aiplayground/players/: __init__.py  base.py  kalaha.py  spr.py  tictactoe.py
aiplayground/utils/: atomic.py  broker.py  clients.py  expect.py
asimovsplayground/: app.py  broker.py  exceptions.py  messages.py  schemas.py  settings.py
asimovsplayground/api/: __init__.py
asimovsplayground/api/players/: __init__.py  models.py  schemas.py  views.py
asimovsplayground/api/rooms/: __init__.py  models.py  schemas.py  views.py
asimovsplayground/utils/: broker.py
docs/: api.rst  conf.py  index.rst
webclient/: .eslintrc  Dockerfile  Dockerfile.dev  package.json
webclient/nginx/: nginx.conf
webclient/public/: index.html  manifest.json
webclient/src/: App.jsx  config.js  index.js
webclient/src/assets/styles/: commonStyles.js
webclient/src/components/: MaterialTableIcons.jsx
webclient/src/components/Attribution/: Attribution.jsx
webclient/src/components/Auth/: AuthProvider.jsx  Login.jsx  styles.js
webclient/src/components/Games/: TicTacToe.jsx  index.js
webclient/src/components/Lobbies/: Lobbies.jsx  MaterialTableAction.jsx  index.js  styles.js
webclient/src/components/Sidebar/: Sidebar.jsx  styles.js
webclient/src/components/Spectate/: Spectate.jsx  index.js  styles.js
webclient/src/components/games/: Default.jsx  TicTacToe.jsx  index.js
webclient/src/layouts/: AuthLayout.jsx
(+2 files in other folders)
