[tool.poetry]
name = "aiplayground"
description = "AI Game Server"
version = "0.1.0"
authors = ["Jack Adamson <jack@mrfluffybunny.com>"]
license = "MIT"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">= 3.6"
eventlet = "^0.25.1"
python-socketio = "^4.3.1"
requests = "^2.22.0"
pydantic = { version = "^1.7.3", python = ">=3.6" }


[tool.poetry.dev-dependencies]
pytest = "^3.4"
mypy = "^0.790"
Sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
